<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EventDataActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contrain"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/tvEventName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="Large Text"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff0000"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPriority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/tvPriority"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEventName" />

        <RadioGroup
            android:id="@+id/rgPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPriority">

            <RadioButton
                android:id="@+id/rblow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbLow" />

            <RadioButton
                android:id="@+id/rbnormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbNormal" />

            <RadioButton
                android:id="@+id/rbhigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rbHigh" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="24dp"
            android:text="@string/setdateandtime"
            android:textAppearance="?android:attr/textAppearanceLarge"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgPriority" />

        <DatePicker
            android:id="@+id/dpDate"
            android:layout_width="354dp"
            android:layout_height="357dp"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="24dp"
            android:datePickerMode="spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TimePicker
            android:id="@+id/tptime"
            android:layout_width="387dp"
            android:layout_height="368dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dpDate" />

        <Button
            android:id="@+id/btaccept"
            android:layout_width="208dp"
            android:layout_height="41dp"
            android:text="@string/btAccept"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tptime" />

        <Button
            android:id="@+id/btCancel"
            android:layout_width="194dp"
            android:layout_height="44dp"
            android:text="@string/btCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tptime" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>